# mimochat

./: CMakeLists.txt  readme.md
exec/: CMakeLists.txt  main.cpp
sources/: BD.cpp  BD.h  CMakeLists.txt  encripts.cpp  encripts.h
sources/amigos/: listaAmigos.cpp  listaAmigos.h
sources/bancoDeDados/: BD.cpp  BD.h  BD.hpp
sources/cliente/: cliente.cpp  cliente.h  encripta.cpp  encripta.h  servidor.cpp  servidor.h
sources/email/: email.cpp  email.h
sources/encripta/: cliente.cpp  cliente.h  encripta.cpp  encripta.h
sources/interface/: console.cpp  console.h
sources/listas/: amigos.cpp  amigos.h
sources/servidorCliente/: cliente.cpp  cliente.h  encripta.cpp  encripta.h  root_certificates.hpp  server_certificate.hpp  servidor.cpp  servidor.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  ut_email.cpp
vulkan/: CMakeLists.txt  interfaceImGui.cpp  interfaceImGui.h  main.cpp  vulkanHelper.cpp  vulkanHelper.h
